--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,7 +64,6 @@ javac.classpath=\
     ${file.reference.primefaces-5.3.jar}:\
     ${file.reference.javax.faces-2.2.13.jar}:\
     ${file.reference.postgresql-9.4.1208.jar}:\
-    ${reference.DAW-PET-SHOP-Model.jar}:\
     ${libs.Hibernate_JPA_2.0_4.2.4.classpath}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
@@ -82,7 +81,8 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.jfreechart-1.0.12.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
-    ${file.reference.spring.jar}
+    ${file.reference.spring.jar}:\
+    ${reference.DAW-PET-SHOP-Model-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -111,8 +111,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.DAW-PET-SHOP-Model=../camada_modelo-master
-reference.DAW-PET-SHOP-Model.jar=${project.DAW-PET-SHOP-Model}/dist/DAW-PET-SHOP-Model.jar
+project.DAW-PET-SHOP-Model-1=../DAW-PET-SHOP-Model
+reference.DAW-PET-SHOP-Model-1.jar=${project.DAW-PET-SHOP-Model-1}/dist/DAW-PET-SHOP-Model.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
